src/www/admin/static/admin.css
/* ... */
main {
    margin: 0px 1em 1em 180px;
    position: relative;
}

main img {
    max-width: 100%;
}

body#popup main {
    margin: 1em 1em 1em 2.5em;
}

body#transparent main {
    margin: 0;
    padding: .2em;
}

span.error, b.error {
    color: #900;
}

span.confirm, b.confirm {
    color: #090;
}

span.alert, b.alert {
    color: #990;
}

p.alert, div.alert, p.error, div.error, p.confirm, div.confirm {
    border: 1px solid #ccc;
    padding: .5em;
    margin-bottom: 1em;
    border-radius: .3em;
    padding-left: 3em;
    position: relative;
}

p.error, div.error {
    border-color: #c00;
    background-color: #fcc;
}

p.confirm, div.confirm {
    border-color: #0c0;
    background-color: #cfc;
}

p.alert, div.alert {
    border-color: #cc0;
    background-color: #ffc;
}

p.confirm::before, div.confirm::before, p.alert::before, div.alert::before, p.error::before, div.error::before {
    font-family: "gicon";
    left: .5em;
    top: .2em;
    position: absolute;
    font-size: 1.5em;
    text-shadow: 2px 2px 5px #666;
}    

p.confirm::before, div.confirm::before {
    content: "☑";
    color: green;
}

p.alert::before, div.alert::before {
    content: "⚠";
    color: yellow;
}

p.error::before, div.error::before {
    content: "⚠";
    color: red;
}

p.help {
    margin: 1em;
    color: #666;
}

p.intro {
    margin: 1em;
}

.error ul, .alert ul, .confirm ul {
    margin-left: 1.5em;
    list-style: disc;
}

/* Formulaires */
fieldset {
    border: 1px solid #ccc;
    padding: 0.8em 1em 0 1em;
    margin-bottom: 1em;
    padding: 0.5em;
}

fieldset legend {
    padding: 0 0.5em;
    font-weight: bold;
    color: #000;
}

label:hover {
    cursor: pointer;
    border-bottom: 1px dotted #900;
}

dl dt label {
    font-weight: bold;
}

fieldset dl dt b {
    color: #900;
    font-size: 0.7em;
    font-weight: normal;
    vertical-align: super;
}

fieldset dl dd.tip {
    color: #666;
}

fieldset dl dd {
    padding: 0.2em 0.5em 0.2em 1em;
}

fieldset dl dd ol, fieldset dl dd ul {
    margin-left: 1.5em;
}

fieldset dl dl {
    margin: .5em 0 .5em 1.2em;
}

input[type=text], textarea, input[type=password], input[type=email],
input[type=url], input[type=tel], select {
    padding: 0.2em 0.4em;
    font-family: Sans-serif;
    min-width: 20em;
    max-width: 100%;
}

input[type=password], input.clearTextPassword {
    font-family: monospace;
}

select, input[size] {
    min-width: 0;
}

input.time {
    text-align: center;
    padding: .2em 0;
}

input[type=number], input[type=date] {
    padding: 0.2em 0.4em;
    font-family: Sans-serif;
    min-width: 2em;
}

input[type=submit], input[type=button], input[type=checkbox], button {
    padding: 0.3em;
    cursor: pointer;
    transition: opacity .5s ease;
}

input.resetButton {
    padding: .1em;
    margin-left: 1em;
}

input[type=button].showPassword {
    margin-left: -2em;
    margin-right: 1em;
    background: none;
}

input[type=button].showPassword:hover {
    background: none;
}

.loader {
    width: 100%;
    min-height: 32px;
    display: block;
    position: relative;
}

.loader.install {
    margin-top: -40px;
}

.loader b {
    text-shadow: 2px 2px 5px #999;
    background: rgb(255, 255, 255);
    background: rgba(255, 255, 255, 0.5);
    border-radius: .5em;
    font-size: 16px;
    line-height: 16px;
    height: 16px;
    z-index: 9999;
    position: absolute;
    display: block;
    left: 10px;
    top: 10px;
    padding: .2em;
}

.loader img {
    position: absolute;
    opacity: 0;
    transition: all 0.5s ease;
    z-index: 2;
}

select.large {
    width: 95%;
}

select.large .niveau_1 {
    background: #333;
    color: #fff;
    font-style: normal;
    font-size: 1.2em;
}

select.large optgroup.niveau_2 {
    background: #666;
    color: #fff;
    font-style: normal;
    padding-left: 1em;
}

select.large option {
    background: #fff;
    color: #000;
}

select.large .niveau_2 { font-style: italic; background: #eee; }
select.large .niveau_3 { padding-left: 1em; font-weight: bold; }
select.large .niveau_4 { padding-left: 2em; }
select.large .niveau_5 { padding-left: 3em; }
select.large .niveau_6 { padding-left: 4em; }

p.submit {
    margin: 1em;
}

.submit input[type=submit] {
    font-size: 1.2em;
}

.submit input.minor {
    font-size: .9em;
}

form .checkUncheck {
    float: left;
}

form span.password_check {
    margin-left: 1em;
    padding: .1em .3em;
    border-radius: .5em;
}

form span.password_check.fail { background-color: #f99; }
form span.password_check.weak { background-color: #ff9; }
form span.password_check.medium { background-color: #ccf; }
form span.password_check.ok { background-color: #cfc; }

dd.help input[type=text] {
    cursor: pointer;
    padding: 0;
    font-family: monospace;
}

form p.actions {
    float: right;
}

ul.actions {
    list-style-type: none;
    margin: 1em 0;
    border-bottom: .1em solid #9c4f15;
    border-bottom-color: rgb(var(--gMainColor));
    padding: 0 1em;
    z-index: 100;
}

ul.actions.sub {
    margin: -1em 2em 1em 0;
    padding-top: 1em;
    border-right: .1em solid #9c4f15;
    border-right-color: rgb(var(--gMainColor));
    border-bottom-right-radius: .5em;
}

ul.actions li {
    display: inline-block;
    margin: 0 0.2em;
}

ul.actions li a, ul.actions li label {
    display: inline-block;
    background: rgb(217, 134, 40);
    background: rgba(217, 134, 40, .5);
    background: rgba(var(--gSecondColor), .5);
    border-radius: .5em .5em 0 0;
    padding: .1em .5em;
    color: #000;
    text-decoration: none;
    transition: background-color .2s, color .2s;
}

ul.actions li input {
    display: none;
}

ul.actions li.current a, ul.actions li input:checked + label {
    background: #9c4f15;
    background: rgb(var(--gMainColor));
    color: #fff;
    color: rgb(var(--gBgColor));
}

ul.actions li a:hover, ul.actions li label:hover {
    color: #fff;
    background-color: rgb(var(--gMainColor));
    text-decoration: underline;
    border-bottom: none;
}
/* ... */

